--- a/manage/manage.ini
+++ b/manage/manage.ini
@@ -3,12 +3,12 @@ APP_NAME = 任务管理系统
 DEBUG = true
 RPC_LISTEN_ADDR = :9800
 HTTP_LISTEN_ADDR = :9900
-CAS_ADDRESS = http://cas.9665yx.club
-CAS_APP_ID = 36
+CAS_ADDRESS = https://xx.com
+CAS_APP_ID = 0
 
 [MYSQL_TASK]
 DIALECT = mysql
-DSN = user_9665:9513364@tcp(47.112.17.60:3306)/task?parseTime=True
+DSN = username:pwd@tcp(ip:port)/task?parseTime=True
 PREFIX = t_
 MAX_IDLE_CONN = 2
 MAX_OPEN_CONN = 10
@@ -24,6 +24,6 @@ LOCAL_TIME = true
 COMPRESS = false
 
 [REDIS]
-HOST = 47.112.17.60
+HOST = ip地址
 PORT = 6381
-PWD = 9665youxi
+PWD = xx
